# OTA_Server

./: Cargo.toml  README.md
config/: server.toml
kernels/: kernel-v1.0.2.img  kernel-v2.0.0.img
metadata/: latest.json  version-history.json
src/: checksum.rs  cli.rs  config.rs  handlers.rs  main.rs  mdns.rs  metadata.rs  metadata_manager.rs
